chore: theming documentation

--- a/docs/guides/provider/Provider.stories.mdx
+++ b/docs/guides/provider/Provider.stories.mdx
@@ -22,8 +22,8 @@ const MyApp = ({ children }) => {
 
 <ArgsTable of={HvProvider} />
 
-The `HvProvider` enables you to define your themes through the `themes` property. Then, the `theme` and `colorMode` properties are used to specify the active theme
-and color mode. For more information, please read the [theming](/docs/guides-theming-default-themes--main-ds-5) documentation.
+The `HvProvider` enables you to define your themes through the `themes` property which accepts a list of themes. Then, the `theme` and `colorMode` properties
+are used to specify the active theme and color mode. For more information, please read the [theming](/docs/guides-theming-default-themes--main-ds-5) documentation.
 
 If several `HvProvider`'s are used, you'll need to create different root elements and set the `rootElementId` property for each one of the providers.
 Otherwise, the styling will not work properly. Please, find an example below.
@@ -37,6 +37,7 @@ Otherwise, the styling will not work properly. Please, find an example below.
         justifyContent: "start",
         alignItems: "center",
         gap: "20px",
+        flexWrap: "wrap",
       }}
     >
       <div id="hv-root-ds5-dawn-docs-provider">
