--- a/docs/overview/GetStarted.stories.mdx
+++ b/docs/overview/GetStarted.stories.mdx
@@ -76,8 +76,8 @@ const MyApp = ({ children }) => {
 };
 ```
 
-The example shown above illustrates the most simple setup to get you started with the UI Kit. This will initialize the UI Kit with the Design System version 5
-and the dawn color mode. However, depending on your design requirements, you may need to implement your own themes. This can be achieved by applying the required
+The example shown above illustrates the most simple setup to get you started with the UI Kit. This will initialize the UI Kit with the Design System 5
+and the dawn color mode. However, depending on your design requirements, you may need to use other themes. This can be achieved by applying the necessary
 changes to the `HvProvider`. For more information on how to customize your themes, please report to the [provider](/docs/guides-provider--main) and [theming](/docs/guides-theming-default-themes--main-ds-5) documentation.
 
 ### 2. Load the default font
@@ -98,7 +98,7 @@ Please, report to the [typography](/docs/foundation-typography--main) documentat
 
 ### 3. Use the components
 
-After setting up the provider, you can now use the components provided by the UI Kit core package like so:
+After setting up the provider and load the font, you start using the components provided by the UI Kit core package like so:
 
 ```tsx
 import { HvTypography } from "@hitachivantara/uikit-react-core";
