--- a/docs/foundation/colors/Colors.stories.mdx
+++ b/docs/foundation/colors/Colors.stories.mdx
@@ -1,7 +1,5 @@
-import { Meta, Story, Preview } from "@storybook/addon-docs";
+import { Meta, Story } from "@storybook/addon-docs";
 import Colors from "./Colors";
-import { HvTypography } from "@hitachivantara/uikit-react-core";
-import { theme } from "@hitachivantara/uikit-styles";
 
 <Meta title="Foundation/Colors" />
 
@@ -13,18 +11,9 @@ It produces positive and minimalistic work environments, leveraging an array of 
 
 Example of a color variable:
 
-<pre
-  style={{
-    border: `1px solid ${theme.colors.atmo4}`,
-    backgroundColor: theme.colors.atmo1,
-    padding: 20,
-    borderRadius: theme.radii.sm,
-    boxShadow: theme.shadows.sm,
-    fontSize: 12,
-  }}
->
-  theme.colors.atmo5
-</pre>
+```tsx
+theme.colors.atmo5;
+```
 
 <Story name="Main">
   <Colors />
