--- a/docs/overview/Introduction.stories.mdx
+++ b/docs/overview/Introduction.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta } from "@storybook/addon-docs";
+import { Tetris, Ungroup, Table } from "@hitachivantara/uikit-react-icons";
 
 <Meta
   title="Overview/Introduction"
@@ -35,11 +36,64 @@ NEXT UI Kit provides developers with the tools they need to build more product i
 NEXT UI Kit provides a collection of components, widgets and templates that can be used to build a wide range of products and digital solutions.
 All are important elements, but they differ in their function and purpose:
 
-**Components**: Building blocks of the UI that can be used in various combinations to create a larger user interface and can be used across different pages or applications.
-
-**Widgets**: Specialized components that address specific use cases and can be used as base to support other scenarios.
-
-**Templates**: Pre-designed layouts or pages that address common UI patterns and can be used to quickly create a consistent design for multiple pages or applications.
+<div
+  style={{
+    display: "flex",
+    flexDirection: "row",
+    gap: "30px",
+    marginTop: "40px",
+    marginBottom: "40px",
+  }}
+>
+  <div
+    style={{
+      display: "flex",
+      flexDirection: "column",
+      alignItems: "center",
+      textAlign: "center",
+    }}
+  >
+    <Tetris iconSize="L" />
+    <h2>Components</h2>
+    <span>
+      Building blocks of the UI that can be used in various combinations to
+      create a larger user interface and can be used across different pages or
+      applications.
+    </span>
+  </div>
+  <div
+    style={{
+      display: "flex",
+      flexDirection: "column",
+      alignItems: "center",
+      textAlign: "center",
+    }}
+  >
+    <Ungroup iconSize="L" />
+    <h2>Widgets</h2>
+    <span>
+      Building blocks of the UI that can be used in various combinations to
+      create a larger user interface and can be used across different pages or
+      applications.
+    </span>
+  </div>
+  <div
+    style={{
+      display: "flex",
+      flexDirection: "column",
+      alignItems: "center",
+      textAlign: "center",
+    }}
+  >
+    <Table iconSize="L" />
+    <h2>Templates</h2>
+    <span>
+      Building blocks of the UI that can be used in various combinations to
+      create a larger user interface and can be used across different pages or
+      applications.
+    </span>
+  </div>
+</div>
 
 ### Packages
 
