chore: fix lerna publish

--- a/docs/overview/Introduction.stories.mdx
+++ b/docs/overview/Introduction.stories.mdx
@@ -54,12 +54,11 @@ All are important elements, but they differ in their function and purpose:
     }}
   >
     <Tetris iconSize="L" />
-    <h2>Components</h2>
-    <span>
+    <h3>Components</h3>
+    <p style={{ fontSize: 14, textAlign: "left" }}>
       Building blocks of the UI that can be used in various combinations to
-      create a larger user interface and can be used across different pages or
-      applications.
-    </span>
+      create a larger user interface.
+    </p>
   </div>
   <div
     style={{
@@ -70,11 +69,11 @@ All are important elements, but they differ in their function and purpose:
     }}
   >
     <Ungroup iconSize="L" />
-    <h2>Widgets</h2>
-    <span>
+    <h3>Widgets</h3>
+    <p style={{ fontSize: 14, textAlign: "left" }}>
       Specialized components that address specific use cases and can be used as
       base to support other scenarios.
-    </span>
+    </p>
   </div>
   <div
     style={{
@@ -85,12 +84,11 @@ All are important elements, but they differ in their function and purpose:
     }}
   >
     <Table iconSize="L" />
-    <h2>Templates</h2>
-    <span>
+    <h3>Templates</h3>
+    <p style={{ fontSize: 14, textAlign: "left" }}>
       Pre-designed layouts or pages that address common UI patterns and can be
       used to quickly create a consistent design for multiple pages or
-      applications.
-    </span>
+    </p>
   </div>
 </div>
 
