chore: small update on documentation layout and other small fixes

--- a/docs/overview/Introduction.stories.mdx
+++ b/docs/overview/Introduction.stories.mdx
@@ -72,9 +72,8 @@ All are important elements, but they differ in their function and purpose:
     <Ungroup iconSize="L" />
     <h2>Widgets</h2>
     <span>
-      Building blocks of the UI that can be used in various combinations to
-      create a larger user interface and can be used across different pages or
-      applications.
+      Specialized components that address specific use cases and can be used as
+      base to support other scenarios.
     </span>
   </div>
   <div
@@ -88,8 +87,8 @@ All are important elements, but they differ in their function and purpose:
     <Table iconSize="L" />
     <h2>Templates</h2>
     <span>
-      Building blocks of the UI that can be used in various combinations to
-      create a larger user interface and can be used across different pages or
+      Pre-designed layouts or pages that address common UI patterns and can be
+      used to quickly create a consistent design for multiple pages or
       applications.
     </span>
   </div>
